feat: multi areal request and geojson support
